Fixed spacing and added ajax call to back end

--- a/Frontend/src/main/resources/static/css/login.css
+++ b/Frontend/src/main/resources/static/css/login.css
@@ -11,7 +11,7 @@ html,body{
     position: relative;
     width: 300px;
     margin: 80px auto;
-    padding: 20px 40px 40px;
+    padding: 30px 50px 50px;
     text-align: center;
     background: #fff;
     border: 1px solid #ccc;
